Archive2/8b/82857d302e4a06/output
In file included from /usr/local/include/boost/range/any_range.hpp:17:0,
                 from main.cpp:2:
/usr/local/include/boost/range/detail/any_iterator.hpp:131:15: error: 'postfix_increment_proxy' is not a class template
         class postfix_increment_proxy<
               ^
/usr/local/include/boost/range/detail/any_iterator.hpp:176:15: error: 'writable_postfix_increment_proxy' is not a class template
         class writable_postfix_increment_proxy<
               ^
main.cpp: In member function 'void MICTest::deepTest()':
main.cpp:154:12: warning: unused variable 'res' [-Wunused-variable]
       auto res = std::accumulate(
            ^
